fix start menu getting cut off

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ justify-content: center;
   backdrop-filter: blur(20px); /* gives the start menu a blur */
   background-color: rgba(255,255,255,.80); /* gives the start menu color */
   bottom: -95%; /* positions the start menu */
-  height: 650px;
+  height: 90%;
   width: 625px;
   transition: all .25s cubic-bezier(.62,0,.32,1); /* changes the start menu animation */
   border-radius: 8px; /* rounds the corners */
